--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bhavya's Portfolio</title>
+    <title>Rehein Graphic Design</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaqueries.css">
 </head>
@@ -11,21 +11,16 @@
 
     <div class="intro">
         <h1 class="logo-header">
-            <span class="intro-logo">B</span>
+            <span class="intro-logo">R</span>
+            <span class="intro-logo">e</span>
             <span class="intro-logo">h</span>
-            <span class="intro-logo">a</span>
-            <span class="intro-logo">v</span>
-            <span class="intro-logo">y</span>
-            <span class="intro-logo">a</span>
+            <span class="intro-logo">e</span>
+            <span class="intro-logo">i</span>
+            <span class="intro-logo">n</span>
 
         </h1>
     </div>
 
-    <nav id="desktop-nav" class="bgcolor">
-        <div class="logo"><img src="./Assets/Bhavya.png"
-            alt="Bhavya" onclick="location.href='./#profile'">
-        </div>
-        <div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
@@ -55,56 +50,31 @@
     <section id="profile">
         <div class="section__pic-container">
             <img class="home-pic"
-            src="./Assets/pfp2_circle.png" alt="Bhavya Parmar">
+            src="./Assets2/RH.png" alt="Bhavya Parmar">
         </div>
         <div class="section__text" class="show">
             <p class="section__text__p1">Hello there, I'm</p>
-            <h1 class="title">Bhavya Parmar</h1>
-            <p class="section__text__p2">Graphic Designer  &  Video Editor</p>
-            <div class="btn-container">
-                <button class="btn btn-color-2"
-                onclick="window.open('./Assets/Resume - Bhavya Parmar.pdf')"
-                >
-                My Resume
-                </button>
-                <button class="btn btn-color-1"
-                onclick="location.href='./#contact'">
-                Get in touch
-                </button>
-            </div>
-            <div id="socials-container">
-                <img src='./Assets/linkedin.png' alt="My LinkedIn Profile"
-                class="icon" onclick="location.href='https://www.linkedin.com/in/bhavya-parmar/'">
-                <img src='./Assets/insta.png' alt="My Instagram Handle"
-                class="icon" onclick="location.href='https://www.instagram.com/bhavyeahhh_/'">
-                </div>
-        </div>
+            <h1 class="title">Rehein</h1>
+            <p class="section__text__p2">Graphic Designer  &  Website Design</p>
     </section>
 
     <section id="about">
         <p class="section__text">Get To Know</p>
         <h1 class="title2">About Me</h1>
         <div class="section-container">
-            <div class="section__pic-container">
-                <img src="./Assets/pfp.png"
-                alt="Bhavya Parmar Profile Picture"
-                class="about-pic">
-            </div>
             <div class="about-details-container">
                 <div class="about-containers">
                     <div class="details-container">
                         <img src="./Assets/experience.png"
                         alt="experience icon" class="icon">
                         <h3 class="about-headings">Experience</h3>
-                        <p><b>5+ years</b><br>Graphic Designing<br>Video Editing</p>
+                        <p><b>5+ years</b><br>Logo Design<br>Branding</p>
                     </div>
                     <div class="details-container">
-                        <img src="./Assets/graduation.png"
-                        alt="education icon" class="icon">
-                        <h3 class="about-headings">Education</h3>
-                        <p><b>IIT Gandhinagar</b>
-                        <br>B.Tech - M.Tech (Dual Degree)<br>
-                        CSE '23-28</p>
+                        <img src="./Assets/experience.png"
+                        alt="experience icon" class="icon">
+                        <h3 class="about-headings">Experience</h3>
+                        <p><b>5+ years</b><br>CSS & HTML<br>Website Design</p>
                     </div>
                 </div>
                 <div class="text-container">
